--- a/Lugares Favoritos/Info.plist
+++ b/Lugares Favoritos/Info.plist
@@ -30,6 +30,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>this app needs your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>this app needs your location.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
